# pynalytics-workers

./: README.md  pom.xml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
src/: app.py
src/shared/: abstract_processing.py  cache.py  logging_config.py
src/speech_to_text_service/: speech_to_text_worker.py
src/summarization_service/: summarization_worker.py
tests/: conftest.py
tests/unit/: test_speech_to_text_worker.py  test_summarization_worker_with_servicebus.py
